--- a/acarshub-react/src/styles/main.scss
+++ b/acarshub-react/src/styles/main.scss
@@ -56,6 +56,7 @@
 @use "components/map-control-button";
 @use "components/map-controls";
 @use "components/map-filters-menu";
+@use "components/map-overlays-menu";
 @use "components/map-legend";
 @use "components/map-provider-selector";
 @use "components/geojson-overlay-button";
