--- a/acarshub-react/src/styles/pages/_search.scss
+++ b/acarshub-react/src/styles/pages/_search.scss
@@ -435,6 +435,9 @@
 
   // Reduced motion support
   @media (prefers-reduced-motion: reduce) {
+    &__form,
+    &__form-body,
+    &__form-toggle,
     &__form-field input,
     &__pagination-button {
       transition: none;
